@@ -9,6 +9,7 @@ This is the changelog for the fosite project.
 #### Removed
 - variables/arrays in sources_base
 #### Fixes
+- memory leak for marrays removed
 - key printing feature in read.py repaired
 - parallel usage of restart.f90 repaired (missing unit number)
 - finalizing asl-library on SX caused no calculations in fftw-interface
@@ -20,4 +21,4 @@ This is the changelog for the fosite project.
 - generic field data types to operate on (marrays)
 - support for NEC SX-Aurora Tsubasa vector engine
 - new build system using cmake
-- for features check [about-page](www.astrophysik.uni-kiel.de/fosite/about.html) 
+- for features check [about-page](www.astrophysik.uni-kiel.de/fosite/about.html)
